source/blender/makesrna/intern/rna_attribute.c
@@ -389,6 +389,17 @@ static PointerRNA rna_AttributeGroup_new(
     ID *id, ReportList *reports, const char *name, const int type, const int domain)
 {
   CustomDataLayer *layer = BKE_id_attribute_new(id, name, type, domain, reports);
+
+  if ((GS(id->name) == ID_ME) && ELEM(layer->type, CD_PROP_COLOR, CD_PROP_BYTE_COLOR)) {
+    Mesh *mesh = (Mesh *)id;
+    if (!mesh->active_color_attribute) {
+      mesh->active_color_attribute = BLI_strdup(layer->name);
+    }
+    if (!mesh->default_color_attribute) {
+      mesh->default_color_attribute = BLI_strdup(layer->name);
+    }
+  }
+
   DEG_id_tag_update(id, ID_RECALC_GEOMETRY);
   WM_main_add_notifier(NC_GEOM | ND_DATA, id);
 
